maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: ';' expected but ',' found.
		setIndication(x - 1) % xMax, y, poids + 1)
                                           ^JediEscaper:31: error: ';' expected but ',' found.
		setIndication(x, (y + 1) % yMax), poids + 1)
                                                ^