maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def trouveLaSortie(): Array[Int] = {
  var xMax:Int = getMondeLargeur() - 1
	var yMax:Int = getMondeHauteur() - 1
  
  for (x <- 0 to xMax) {
    for (y <- 0 to yMax) {
      if (aBiscuit(x, y))
      	return Array[Int](x, y)
    }
  }
  
  return Array[Int](2)
}

def marqueCase(x: Int, y: Int, poids: Int) {
  var xMax:Int = getMondeLargeur()
	var yMax:Int = getMondeHauteur()
 
  
  // On teste les cases adjacentes.
  if (!aMurOuest(x, y) && getIndication((x - 1) % xMax, y) == 9999) {
		setIndication(x - 1) % xMax, y, poids + 1)
  }
  
  if (!aMurNord(x, y) && getIndication(x, (y - 1) % yMax) == 9999) {
		setIndication(x, (y - 1) % yMax, poids + 1)
  }
  
  if (!aMurNord(x, (y + 1) % yMax) && getIndication(x, (y + 1) % yMax) == 9999) {
		setIndication(x, (y + 1) % yMax), poids + 1)
  }
  
  if (!aMurOuest((x + 1) % xMax, y) && getIndication((x + 1) % xMax, y) == 9999) {
		setIndication((x + 1) % xMax, y, poids + 1)
  }
}

def ecritIndications() {
  // Tout d'abord, il faut trouver la sortie ! :p
  var posSortie:Array[Int] = trouveLaSortie()
  
  marqueCase(posSortie(0), posSortie(1), 0)
}

override def run() {
  // On commence par écrire les indications sur les cases.
  ecritIndications()
}